syntax = "proto3";

option go_package = "pb/";

message Image {
  repeated uint32 value = 1;
}

enum Status {
  Ok = 0;
  Err = 1;
}

service ImageService {
  rpc Produce(ProduceRequest) returns (ProduceResponse) {}
  rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
}

message ProduceRequest {
  Image img = 1;
}

message ProduceResponse {
  Status status = 1;
  string image = 2;
}

message ConsumeRequest {
  string image1 = 1;
  string image2 = 2;
}

message ConsumeResponse {
  Image image1 = 1;
  Image image2 = 2;
}